<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="40dp">
<ImageView
    android:id="@+id/turnback"
    android:layout_marginLeft="10dp"
    android:src="@drawable/icn_back"
    android:layout_marginTop="11dp"
    android:layout_width="12dp"
    android:layout_height="18dp"
    android:layout_marginStart="10dp" />
    <TextView
        android:id="@+id/backText"
        android:layout_toRightOf="@+id/turnback"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/titleBack"
        android:textSize="17sp"
        android:textColor="#80cfb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        tools:ignore="UnknownId"
        android:layout_toEndOf="@+id/turnback" />
    <TextView
        android:id="@+id/mainTitle"
        android:text="@string/weather"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:layout_marginTop="7dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/cities"
        android:textColor="#80cfb3"
        android:textSize="17sp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />
</RelativeLayout>
