<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yijian.firstproject_demo.Weather">


    <include layout="@layout/title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="284dp">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:text="@string/personName"
            android:textColor="#ffffff" />
        <RelativeLayout
            android:id="@+id/templeTextLayout"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/location"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/templeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/tem"
                android:textColor="#ffffff"
                android:includeFontPadding="false"
                android:lineSpacingMultiplier="0"
                android:lineSpacingExtra="1dp"
                android:textSize="100sp" />
            <ImageView
                android:layout_toRightOf="@+id/templeText"
                android:layout_alignBottom="@+id/templeText"
                android:layout_marginTop="-10dp"
                android:src="@drawable/icn_sun"
                android:layout_width="29dp"
                android:layout_height="22dp"
                android:layout_toEndOf="@+id/templeText" />
        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/templeTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:text="@string/text_demo"
                android:textColor="#ffffff"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:text="@string/text6"
                android:textColor="#ffffff"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:text="@string/text5"
                android:textColor="#ffffff"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <GridView
        android:layout_marginTop="30dp"
        android:fadingEdge="none"
        android:id="@+id/dayList"
        android:scrollbars="none"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </GridView>

</LinearLayout>
