<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.yijian.firstproject_demo.Remind">

    <include layout="@layout/title2" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_temp1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textColor="#99ffffff"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_temp1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_style"
                android:hint="@string/pracehodle"
                android:textColor="#ffffff"
                android:textCursorDrawable="@drawable/curcor_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_temp1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:text="@string/general"
                android:textColor="#99ffffff"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_temp1"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/remind"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@+id/remind_button"
                android:layout_gravity="right|center_vertical"
                android:gravity="center_vertical"
                android:layout_width="50dp"
                android:layout_height="30dp">

                <ImageView
                    android:id="@+id/circle_rect"
                    android:layout_width="50dp"
                    android:layout_height="31dp"
                    android:src="@drawable/out_rect" />

                <ImageView
                    android:visibility="gone"
                    android:layout_gravity="right"
                    android:id="@+id/circle"
                    android:src="@drawable/handle"
                    android:layout_marginTop="2dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />
                <ImageView
                    android:id="@+id/circle1"
                    android:src="@drawable/handle"
                    android:layout_marginTop="2dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_temp1"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:orientation="horizontal"
            android:paddingRight="15dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                android:textColor="#ffffff"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/time"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:text="Wed, 20/08/14, 21:00"
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_temp1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:textColor="#ffffff"
                android:textSize="14sp" />
            <LinearLayout
                android:id="@+id/repeat"
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#ffffff"
                    android:text="Monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icn_arrow"
                    android:layout_width="7dp"
                    android:layout_height="12dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_temp1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/end_repeat"
                android:textColor="#ffffff"
                android:textSize="14sp" />
            <LinearLayout
                android:id="@+id/end_repeat"
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#ffffff"
                    android:text="Never"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icn_arrow"
                    android:layout_width="7dp"
                    android:layout_height="12dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
